@@ -1,3 +1,11 @@
+2011-09-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.94 released.
+
+        * Added code to complement FullAuto - now invokes
+          default set when one is defined.
+
+
 2011-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.93 released.
